--- a/src/app/expand-text/expand-text.component.scss
+++ b/src/app/expand-text/expand-text.component.scss
@@ -7,6 +7,10 @@ details {
 
     mat-icon {
         opacity: .67;
+        font-size: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     &[open] {
@@ -14,9 +18,6 @@ details {
             transform: rotateZ(180deg);
         }
 
-        summary {
-            color: mat-color($calc-app-accent);
-        }
     }
 
     & > summary {
@@ -25,10 +26,6 @@ details {
         align-items: center;
         cursor: pointer;
 
-        &:hover {
-            color: mat-color($calc-app-accent);
-        }
-        
         &::marker, &::-webkit-details-marker {
             display: none;
         }
@@ -39,10 +36,7 @@ details {
     }
 
     & > p {
-        position: absolute;
-        background: white;
-        padding: 1em;
-        box-shadow: 0px 1px 4px rgb(0 0 0 / 30%);
-        z-index: 10;
+        margin: 0;
+        color: rgba(0,0,0,.67);
     }
 }
